--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8081
+# postgres config
+spring.datasource.url=jdbc:postgresql://localhost:5432/bernyz
+spring.datasource.username=postgres
+spring.datasource.password=Flamingo4
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# hibernate config
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# dev profile
+management.endpoints.jmx.exposure.include=*
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.generate_statistics=true
