--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+ 	<dependency>
+ 		<groupId>org.springdoc</groupId>
+ 		<artifactId>springdoc-openapi-ui</artifactId>
+ 		<version>1.6.9</version>
+ 	</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -51,7 +58,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
