--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.generate_statistics=true
+
+
+#api docs
+springdoc.api-docs.path=/api-docs
+# springdoc.swagger-ui.path=/swagger-ui.html
+# springdoc.swagger-ui.configUrl=/api-docs/swagger-config
