--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 # postgres config
-spring.datasource.url=jdbc:postgresql://localhost:5432/bernyz
+spring.datasource.url=jdbc:postgresql://postgres:5432/bernyz
 spring.datasource.username=postgres
 spring.datasource.password=Flamingo4
 spring.datasource.driver-class-name=org.postgresql.Driver
