--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -19,21 +19,6 @@ on:
     branches: [ "master" ]
   schedule:
     - cron: '16 6 * * 3'
-
-  create:
-        postgres:
-          image: postgres:14
-          env:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: Flamingo4
-            POSTGRES_DB: bernyz
-          ports:
-            - 5432:5432/tcp
-          options: >-
-            --health-cmd pg_isready
-            --health-interval 10s
-            --health-timeout 5s
-            --health-retries 5
           
 jobs:
   analyze:
@@ -43,6 +28,20 @@ jobs:
       actions: read
       contents: read
       security-events: write
+    services:
+        postgres:
+          image: postgres:14
+          env:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: Flamingo4
+            POSTGRES_DB: bernyz
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
 
     strategy:
       fail-fast: false
@@ -79,8 +78,8 @@ jobs:
         
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+#     - name: Autobuild
+#       uses: github/codeql-action/autobuild@v2
 
 
     # ℹ️ Command-line programs to run using the OS shell.
