--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 	<dependencies>
 
  	<dependency>
+ 		<groupId>maven</groupId>
+ 		<artifactId>maven-deploy-plugin</artifactId>
+ 		<version>1.3</version>
+ 	</dependency>
+
+
+ 	<dependency>
  		<groupId>org.springdoc</groupId>
  		<artifactId>springdoc-openapi-ui</artifactId>
  		<version>1.6.9</version>
@@ -71,6 +78,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.2</version>
+		 </plugin>
 		</plugins>
 	</build>
 
