--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 # postgres config
+# spring.datasource.url=jdbc:postgresql://postgres_db:5432/bernyz
 spring.datasource.url=jdbc:postgresql://localhost:5432/bernyz
 spring.datasource.username=postgres
 spring.datasource.password=Flamingo4
