Add working frontend with react

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.data.rest.base-path=/api
 # postgres config
 # spring.datasource.url=jdbc:postgresql://postgres_db:5432/bernyz
 spring.datasource.url=jdbc:postgresql://localhost:5432/bernyz
