--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "axios": "^0.27.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "^2.1.3",
         "rest": "^2.0.0",
         "style-loader": "^3.3.1",
         "web-vitals": "^2.1.4"
@@ -55,6 +54,8 @@
         "@babel/preset-react": "^7.18.1",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
+        "react-scripts": "^5.0.1",
+        "svg-url-loader": "^7.1.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
     }
