--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -44,6 +44,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy --file pom.xml -DaltDeploymentRepository=internal.repo::default::file:///home/bernyz
+      run: mvn deploy --file pom.xml -DaltDeploymentRepository=releaseRepository::default::https://github.com/Brian-Weloba/bernyz-backend
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
