--- a/pom.xml
+++ b/pom.xml
@@ -154,8 +154,8 @@
 	<distributionManagement>
 		<repository>
 			<uniqueVersion>false</uniqueVersion>
-			<id>corp1</id>
-			<name>Corporate Repository</name>
+			<id>bernyz1</id>
+			<name>Berny'z</name>
 			<url>file:///home/myfolder/.m2</url>
 			<layout>default</layout>
 		</repository>
