--- a/pom.xml
+++ b/pom.xml
@@ -152,13 +152,11 @@
 	</build>
 
 	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>bernyz1</id>
-			<name>Berny'z</name>
-			<url>file:///home/myfolder/.m2</url>
-			<layout>default</layout>
-		</repository>
-	</distributionManagement>
+   <repository>
+     <id>bernyz1</id>
+     <name>Berny'z</name>
+     <url>https://maven.pkg.github.com/Brian-Weloba/bernyz-backend</url>
+   </repository>
+</distributionManagement>
 
 </project>
